# sochdb

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  azure-pipelines.yml  deny.toml  package-lock.json  package.json  sochdb_pb2_grpc.py  start-studio.sh  test_distributed.py  test_minikube.py  test_sochdb.py  toondb-server-config.toml
.azurepipelines/: azure-pipelines-ci.yml  azure-pipelines-linux.yml  azure-pipelines-macos.yml  azure-pipelines-publish-only.yml  azure-pipelines-python-release.yml  azure-pipelines-windows.yml  azure-pipelines.yml  go-ci.yml  go-release.yml  nodejs-ci.yml  nodejs-release.yml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  go-ci.yml  nodejs-ci.yml  perf-gates.yml  release-sdks.yml  release.yml  workflow.yml
PRs/: 10-fix-unsafe-op-in-unsafe-fn.md  11-fix-atomic-claim-queue-id.md
benchmarks/: 360_BENCHMARK_REPORT.md  BACKEND_PROFILING_REPORT.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS_2024-12-27.md  BENCH_README.md  Cargo.toml  FINAL_BENCHMARK_REPORT.md  PERFORMANCE_REPORT.md  PERF_REPORT.md  README.md  benchmark_results.json  bulk_benchmark.py  comprehensive_benchmark.py  final_benchmark_results.json  full_benchmark_suite.py  full_headtohead.py  insert_profile.rs  ondisk_benchmark.py  performance_profiler.py  profiling_data.json  python_headtohead.py  real_embedding_benchmark.py  realworld_comparison.py  reproduce_hnsw_bug.py  results.txt  run_all_tests.py  toondb_360_benchmark.py  toondb_vs_chromadb.py  vector_db_benchmark.py
benchmarks/datasets/: manifest.json
benchmarks/public/: beir_runner.py
benchmarks/python/: test_ffi_perf.py
benchmarks/reports/: beir_scifact.json
benchmarks/retrieval/: README.md  embed.py  run_lancedb.py  run_sochdb.py  run_sochdb_grpc.py  run_sqlite_faiss.py
benchmarks/src/: comprehensive_bench.rs  lib.rs  main.rs  microbench.rs
benchmarks/workloads/: agent_memory.yaml  rag_retrieval.yaml  timeline_queries.yaml
docker/: Dockerfile  QUICKSTART.md  README.md  integration_test_results.json
docs/: ARCHITECTURE.md  RELEASE_NOTES_0.2.9.md  index.md
docs/api-reference/: python-api.md  rust-api.md
docs/concepts/: architecture.md  performance.md  toon-format.md
docs/contributing/: style-guide.md  testing.md
docs/cookbook/: logging.md  mcp-integration.md  vector-indexing.md
docs/getting-started/: first-app.md  installation.md  local-knowledge-retrieval-comparison.md  local-retrieval-start-here.md  python-install-matrix.md  quickstart.md  (+1 more)
examples/: README.md  run_feature_tests.sh  test_cheatsheet.md
notebooks/: 11_agentic_tool_use.ipynb  sochdb_showcase (1).ipynb  sochdb_showcase (2.ipynb  sochdb_showcase.ipynb  sochdb_showcase00.ipynb  sochdb_showcase_.ipynb  sochdb_showcase_4.ipynb
proto/: sochdb.proto  toondb.proto
sochdb-bench/: BENCHMARK_RESULTS.md  Cargo.toml  OPTIMIZATIONS.md  README.md  run_benchmarks.sh
sochdb-client/: Cargo.toml
sochdb-core/: Cargo.toml
sochdb-fusion/: Cargo.toml
sochdb-fusion/src/: bitset.rs  candidate_mask.rs  lib.rs  pipeline.rs  query.rs  temporal_graph.rs  versioned_store.rs
sochdb-grpc/: Cargo.toml
sochdb-grpc/proto/: sochdb.proto
sochdb-grpc/src/: auth_interceptor.rs  blocking_pool.rs  collection_server.rs  context_server.rs  graph_server.rs  health_service.rs  kv_server.rs  lib.rs  main.rs  memory_backend.rs  metrics_server.rs  namespace_server.rs  observability.rs  pg_wire.rs  policy_server.rs  security.rs  server.rs  subscription_server.rs  ws_server.rs
sochdb-grpc/tests/: context_memory_integration.rs
sochdb-index/: Cargo.toml
sochdb-kernel/: Cargo.toml
sochdb-mcp/: Cargo.toml
sochdb-memory/: Cargo.toml
sochdb-plugin-logging/: Cargo.toml
sochdb-python/: Cargo.toml  pyproject.toml
sochdb-query/: Cargo.toml
sochdb-sdk/python/: pyproject.toml
sochdb-sdk/python/sochdb_sdk/: __init__.py  client.py
sochdb-storage/: Cargo.toml
sochdb-tools/: Cargo.toml
sochdb-vector/: Cargo.toml
toondb-client/: Cargo.toml  README.md
toondb-core/: Cargo.toml
toondb-core/src/: block_storage.rs  buddy_allocator.rs  catalog.rs  error.rs  format_migration.rs  key.rs  lib.rs  memory_schema.rs  predefined_views.rs  schema_bridge.rs  schema_evolution.rs  sharded_block_store.rs  string_interner.rs  toon.rs  toon_codec.rs  toonfs_metadata.rs  txn.rs  version_chain.rs  vfs.rs
toondb-go/: README.md  client.go  database.go  go.mod  query.go  server.go  vector.go
toondb-grpc/: Cargo.toml  build.rs
toondb-index/: Cargo.toml  README.md
toondb-js/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  tsconfig.esm.json
toondb-kernel/: Cargo.toml  README.md
toondb-mcp/: Cargo.toml  README.md  mcp-claude-desktop.json  mcp-cursor.json  mcp-goose.json  mcp.json  test_mcp_chat.py  toondb-mcp-debug.sh  toondb-mcp.sh
toondb-plugin-logging/: Cargo.toml
toondb-python/: Cargo.toml  README.md  pyproject.toml
toondb-python-sdk/: CHANGELOG.md  README.md  pyproject.toml
toondb-query/: Cargo.toml
toondb-storage/: Cargo.toml
toondb-studio/: package.json
toondb-tools/: Cargo.toml
toondb-vector/: Cargo.toml  build.rs
toondb-wasm/: Cargo.toml
(+489 files in other folders)
