[package]
name = "sochdb-plugin-logging"
version = "0.4.8"
edition = "2024"
description = "JSON structured logging plugin for SochDB"
license.workspace = true

[dependencies]
sochdb-kernel = { version = "0.4.8", path = "../sochdb-kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
