[package]
name = "toondb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ToonDB core primitives (TOON format, storage internals, transactions)"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
toon-format = "0.4"
thiserror = { workspace = true }
byteorder = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
crc32fast = "1.3"
# Production compression
lz4 = { workspace = true }
zstd = { workspace = true }
# Lock-free concurrent data structures
dashmap = { workspace = true }

# Optional jemalloc allocator for better performance
tikv-jemallocator = { version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
jemalloc = ["tikv-jemallocator"]
